--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,32 @@
 before_install:
 - openssl aes-256-cbc -K $encrypted_8eb3f01beb5e_key -iv $encrypted_8eb3f01beb5e_iv
   -in travis_key.enc -out travis_key -d
+
+  
+language: go
+
+go:
+    - "1.7.1"
+
+env:
+    global:
+        - SSH_KEY="travis_key"
+        - GIT_NAME="Remi Parain"
+        - GIT_EMAIL="remi.parain@gmail.com"
+        - SOURCE_DIR="public"
+        - DEPLOY_BRANCH="source"
+
+before_install:
+- openssl aes-256-cbc -K $encrypted_8eb3f01beb5e_key -iv $encrypted_8eb3f01beb5e_iv -in travis_key.enc -out travis_key -d
+
+before_script:
+    - git clone --branch v2 https://github.com/go-yaml/yaml $GOPATH/src/gopkg.in/yaml.v2
+    - go get -u -v github.com/spf13/hugo
+
+script:
+    - git clone https://github.com/digitalcraftsman/hugo-icarus-theme.git ./themes/hugo-icarus-theme
+    - hugo
+
+after_success:
+    - echo "remi-parain.github.io" > ./public/CNAME
+    - ./scripts/deploy.sh
